--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,155 @@ html {
 .item:hover {
     transform: scale(1.1); 
 }
+
+.wrapper-product{
+    margin : 130px 30px 20px 30px;
+}
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+.bar{
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    background-color: #99B080;
+}
+.wrapper-product {
+  margin: 130px 30px 20px 30px;
+}
+
+.header-product {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.product-category {
+  padding: 0 2vw;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: capitalize;
+}
+
+.product-container, .product-container1 {
+  display: flex;
+  overflow-x: auto;
+  padding: 0 2vw;
+  scroll-behavior: smooth;
+  position: relative; 
+}
+
+.product-container::-webkit-scrollbar {
+  display: none;
+}
+
+.product-card {
+  flex: 0 0 auto;
+  width: 250px;
+  height: 295px;
+  margin-right: 40px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative; 
+}
+
+.product-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 70%;
+  border-radius: 10px;
+}
+
+.product-btn {
+  margin-top: 10px;
+  width: 100%;
+  text-transform: capitalize;
+  background: #90B474;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  transition: 0.5s;
+  cursor: pointer;
+  opacity: 0;
+  padding: 5px 10px;
+}
+
+.product-card:hover .product-btn {
+  opacity: 1;
+}
+.pre-btn,
+.nxt-btn {
+  border: none;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ABABAB; 
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  top: 46%; 
+  transform: translateY(-50%); 
+  z-index: 2; 
+  transition: background 0.3s;
+}
+
+.pre-btn {
+  left: 0; 
+}
+
+.nxt-btn {
+  right: 0; 
+}
+
+.pre-btn img,
+.nxt-btn img {
+  width: 15px;
+}
+
+.pre-btn:hover,
+.nxt-btn:hover {
+  background: #90B474; 
+}
+.pre-btn1,
+.nxt-btn1 {
+  border: none;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ABABAB; 
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  top: 115%; 
+  transform: translateY(-50%); 
+  z-index: 2; 
+  transition: background 0.3s;
+}
+
+.pre-btn1 {
+  left: 0; 
+}
+
+.nxt-btn1 {
+  right: 0; 
+}
+
+.pre-btn1 img,
+.nxt-btn1 img {
+  width: 15px; 
+}
+
+.pre-btn1:hover,
+.nxt-btn:hover {
+  background: #90B474; 
+}
