--- a/styles.css
+++ b/styles.css
@@ -293,3 +293,39 @@ html {
 .nxt-btn:hover {
   background: #90B474; 
 }
+
+.container{
+    display: flex;
+}
+.ftkue{
+  padding: 10%;
+  padding-top: 20%;
+    height: 80%;
+    width: 80%;
+}
+
+.name1{
+  padding-top: 8%;
+    font-size: larger;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.footer {
+  bottom: 0;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  background-color: #A7D397;
+}
+
+.footer h1 {
+  margin: 0;
+  padding: 0;
+  font-size: medium;
+}
+
+.about1 {
+  padding-top: 15px;
+}
