--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ html {
 
 .prev {
     margin-left: 500px;
-    background-image: url('./assets/netxkiri.png');
+    background-image: url('./assets/nextkiri.png');
 }
 
 .next {
