--- a/styles.css
+++ b/styles.css
@@ -329,3 +329,70 @@ html {
 .about1 {
   padding-top: 15px;
 }
+
+.contact-container{
+    max-width: 960px;
+    margin: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:1.5rem;
+    
+ }
+.form-container{
+   padding: 20px;
+ }
+.form-container h3{
+ margin-left: -5%;
+ font-size: 2.0rem;
+ font-weight: 600;
+ margin-bottom:  1rem;
+ color:black;
+}
+.form-container label {
+   font-weight: 800;
+ color:black;
+
+}
+.contact-form{
+   display: grid;
+   row-gap: 1rem;
+}
+.contact-form input,
+.contact-form textarea{
+   width: 100%;
+   border: none;
+   outline: none;
+   background: #8080802e;
+   padding: 10px;
+   font-size: 0.9rem;
+   color:black ;
+   border-radius: 0.4rem;
+
+}
+.contact-form textarea{
+   resize: none;
+   height: 200px;
+}
+.contact-form .send-button{
+   border: none;
+   outline: none;
+   background: #00dbde;
+   font-size: 1rem;
+   font-weight: 500;
+   text-transform: uppercase;
+   cursor: pointer;
+}
+.contact-form .send-button:hover {
+   background: hsl(181, 100%,44%,0.8);
+   transition: 0.3s all linear;
+
+}
+.map iframe{
+   display: flex;
+   flex-direction: column;
+   width: 95%;
+   height: 80%;
+   margin-left:5%;
+   margin-top: 20%;
+}
