--- a/styles.css
+++ b/styles.css
@@ -337,6 +337,7 @@ html {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     gap:1.5rem;
+    margin-top: 300px;
     
  }
 .form-container{
