--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;500;700&display=swap');
 *{
     margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 
 html {
