--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ html {
 .contact-form .send-button{
    border: none;
    outline: none;
-   background: #00dbde;
+   background: #90B474;
    font-size: 1rem;
    font-weight: 500;
    text-transform: uppercase;
