--- a/styles.css
+++ b/styles.css
@@ -443,3 +443,77 @@ html {
     width: 500px;
     position: fixed;
 }
+
+.prev, .next {
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+}
+
+.prev {
+    margin-left: 300px;
+    background-image: url('nextkiri.png');
+}
+
+.next {
+    margin-right: 300px;
+    background-image: url('nextkanan.png');
+}
+
+.footer {
+border-top: #000;
+padding-left: 550px;
+margin-top: 30px;
+}
+
+/* Responsive CSS */
+
+@media (max-width: 768px) {
+    .sliders {
+      margin-top: 100px;
+    }
+  
+    .geser {
+      height: 400px;
+    }
+  
+    .geser img {
+      max-width: 50%;
+      max-height: 30%;
+      margin-bottom: 150px;
+      margin-left: 0;
+    }
+  
+    .geser p {
+      margin-top: 250px;
+      width: 200px;
+    }
+  
+    .geser h1 {
+      margin-top: 50px;
+      width: 200px;
+    }
+  
+    .prev, .next {
+      width: 50px;
+      height: 50px;
+    }
+  
+    .prev {
+      margin-left: 100px;
+    }
+  
+    .next {
+      margin-right: 100px;
+    }
+  
+    .footer {
+      padding-left: 150px;
+    }
+  }
+  
