--- a/styles.css
+++ b/styles.css
@@ -397,6 +397,56 @@ html {
    margin-left:10%;
    margin-top:50%;
 }
+/* Taruh Style Navbar Disini */
+.nav-box{
+    position: fixed;
+    background-color: white;
+    z-index: 3;
+    width: 100%;  
+    height: 12vh;
+    top: 0;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    justify-content: space-between;
+}
+.nav-wrapper ul {  
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar{
+    margin: 10px;
+}
+.li-navbar {
+    list-style-type: none;
+    padding: 0 20px;
+    margin: 0;
+    font-size: 15px;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.a-navbar {
+    color: #ABABAB;
+    text-decoration: none;
+    font-weight: 450;
+}
+.logo-cont img {
+    margin-left: 20px;
+    width: 65px;
+}
+.a-navbar-now {
+    color: #90B474;
+    text-decoration: underline;
+    font-weight: 650;
+}
+.a-navbar:hover{
+    color: #919191;
+    font-weight: 550;
+}
+
+/* Navbar End */
 .sliders {
     margin-top: 200px;
     display: flex;
@@ -516,4 +566,3 @@ margin-top: 30px;
       padding-left: 150px;
     }
   }
-  
