--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,73 @@ html {
 
 /* Navbar End */
 
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Patrick Hand', cursive;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* Taruh Style Navbar Disini */
+.nav-box{
+    position: fixed;
+    background-color: white;
+    z-index: 3;
+    width: 100%;  
+    height: 12vh;
+    top: 0;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    justify-content: space-between;
+}
+.nav-wrapper ul {  
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar{
+    margin: 10px;
+}
+.li-navbar {
+    list-style-type: none;
+    padding: 0 20px;
+    margin: 0;
+    font-size: 15px;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.a-navbar {
+    color: #ABABAB;
+    text-decoration: none;
+    font-weight: 450;
+}
+.logo-cont img {
+    margin-left: 20px;
+    width: 65px;
+}
+.a-navbar-now {
+    color: #90B474;
+    text-decoration: underline;
+    font-weight: 650;
+}
+.a-navbar:hover{
+    color: #919191;
+    font-weight: 550;
+}
+
+/* Navbar End */
+
 .slider {
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     align-items: center;
 }
@@ -86,8 +151,8 @@ html {
 
 .slide img {
     border-radius: 10%;
-    max-width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 60%;
 }
 
 .prev, .next {
@@ -114,12 +179,11 @@ html {
 .menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
     margin-top: 20px;
 }
 
 .item {
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     transition: transform 0.3s ease-in-out; 
     position: relative;
@@ -130,7 +194,7 @@ html {
 .item img {
     border-radius: 10%;
     width: 80%;
-    height: 100%;
+    height: 45%;
 }
 
 .top h1 {
@@ -140,6 +204,19 @@ html {
 
 .item:hover {
     transform: scale(1.1); 
+}
+
+
+/* Footer */
+
+.footer {
+    background-color: #f2f2f2;
+    padding: 10px;
+    text-align: center;
+}
+.footer div {
+    display: inline-block;
+    margin: 0 50px;
 }
 
 .wrapper-product{
@@ -310,22 +387,6 @@ html {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.footer {
-  bottom: 0;
-  width: 100%;
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-  color: #fff;
-  background-color: #A7D397;
-}
-
-.footer h1 {
-  margin: 0;
-  padding: 0;
-  font-size: medium;
-}
-
 .about1 {
   padding-top: 15px;
 }
@@ -397,56 +458,7 @@ html {
    margin-left:10%;
    margin-top:50%;
 }
-/* Taruh Style Navbar Disini */
-.nav-box{
-    position: fixed;
-    background-color: white;
-    z-index: 3;
-    width: 100%;  
-    height: 12vh;
-    top: 0;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-    justify-content: space-between;
-}
-.nav-wrapper ul {  
-    display: flex;
-    height: 60px;
-    justify-content: space-between;
-    align-items: center;
-}
-.navbar{
-    margin: 10px;
-}
-.li-navbar {
-    list-style-type: none;
-    padding: 0 20px;
-    margin: 0;
-    font-size: 15px;
-    align-items: center;
-    font-family: 'Montserrat', sans-serif;
-}
-.a-navbar {
-    color: #ABABAB;
-    text-decoration: none;
-    font-weight: 450;
-}
-.logo-cont img {
-    margin-left: 20px;
-    width: 65px;
-}
-.a-navbar-now {
-    color: #90B474;
-    text-decoration: underline;
-    font-weight: 650;
-}
-.a-navbar:hover{
-    color: #919191;
-    font-weight: 550;
-}
 
-/* Navbar End */
 .sliders {
     margin-top: 200px;
     display: flex;
@@ -515,11 +527,6 @@ html {
     background-image: url('nextkanan.png');
 }
 
-.footer {
-border-top: #000;
-padding-left: 550px;
-margin-top: 30px;
-}
 
 /* Responsive CSS */
 
@@ -561,8 +568,3 @@ margin-top: 30px;
     .next {
       margin-right: 100px;
     }
-  
-    .footer {
-      padding-left: 150px;
-    }
-  }
